feat: 실패 응답 추가 및 JSDoc 주석 추가
