# week5/src/modules/stores/controllers/store.controller.ts
@@ -1,14 +1,19 @@
-import { Controller, Route, Post, Body, Tags, SuccessResponse } from "tsoa";
+import { Controller, Route, Post, Body, Tags, SuccessResponse, Response } from "tsoa";
 import { bodyToStore, StoreAddRequest, StoreAddResponse } from "../dtos/store.dto.js";
 import { storeAdd } from "../services/store.service.js";
-import { ApiResponse, success } from "../../../common/responses/response.js";
+import { ApiResponse, ApiErrorResponse, success } from "../../../common/responses/response.js";
 
 @Route("stores")
 @Tags("Stores")
 export class StoreController extends Controller {
-  // 특정 지역에 가게 추가하기
+  /**
+   * 가게 추가 API
+   * @summary 특정 지역에 새로운 가게를 추가합니다.
+   */
   @Post()
   @SuccessResponse("201", "Created")
+  @Response<ApiErrorResponse>(400, "Bad Request")
+  @Response<ApiErrorResponse>(500, "Internal Server Error")
   public async addStore(@Body() body: StoreAddRequest): Promise<ApiResponse<StoreAddResponse>> {
     this.setStatus(201);
     const store = await storeAdd(bodyToStore(body));
